# amt-cleats-sports-editor

./: CMakeLists_AMT_Integration.txt
app/sports/: CMakeLists.txt  coaching_panel.cpp  coaching_panel.h  formation_detector.cpp  formation_detector.h  formation_overlay.cpp  formation_overlay.h  kafka_publisher.cpp  kafka_publisher.h  main.cpp  minio_client.cpp  minio_client.h  sports_analysis_core.cpp  sports_analysis_core.h  sports_analytics_dashboard.cpp  sports_analytics_dashboard.h  sports_integration.cpp  sports_integration.h  superset_panel.cpp  superset_panel.h  triangle_defense_sync.cpp  triangle_defense_sync.h  video_timeline_sync.cpp  video_timeline_sync.h
